apply signup && load json file

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="../static/js/bundle.js"></script>
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 </head>
-<body style="background-color:white;">
+<body onload="getJson();" style="background-color:white;">
     <header class="main_header">
         <% include header %>
     </header>
@@ -27,11 +27,11 @@
         </div>
     </div>-->
     <div style="padding-right:15px;text-align:right;z-index:1">
-      <div class="hasIcon shortcode_button btn_normal btn_type5" onClick="saveProject(<%= user.userID %>, <%= scene.idscene %>);" style="width:80px;">Save</div>
+      <div class="hasIcon shortcode_button btn_normal btn_type5" onClick="saveProject(<%= user.userID %>, <%= sceneID %>);" style="width:80px;">Save</div>
     </div>
-    <div id="upload_after" class="fs_gallery_container fade" style="height:100%;display:none;z-index:-1">
+    <!--<div id="upload_after" class="fs_gallery_container fade" style="height:100%;display:none;z-index:-1">
         <iframe id="main_scene" class="main_scene" width="100%" height="100%" allowfullscreen="yes" scrolling="no" allowvr="yes" src="../static/html/canvas.html"></iframe>
-    </div>
+    </div>-->
     <div class="container" style="padding-top:10px;">
         <div id="wrapper" class="row">
             <div class="col-md-2">
@@ -65,9 +65,12 @@
                   </div>
                 </form>
               </div>
+              <div id="upload_after" style="height:100%;display:none;">
+                <iframe id="main_scene" class="main_scene" width="100%" height="100%" allowfullscreen="yes" scrolling="no" allowvr="yes" src="../static/html/canvas.html"></iframe>
+              </div>
             </div>
             <!--/span-->
-            <div id="right-toolbar" class="col-md-2">
+            <div id="right-toolbar" class="col-md-2" style="float:right;">
                 <div>
                     <div class="well">
                         <table class="nav object-list">
@@ -171,7 +174,7 @@
     <!--/.fluid-container-->
     <!-- Modal -->
     <div id="myModal" class="modal fade" role="dialog">
-        <form id="image_form" action="/project/<%= scene.idscene %>/image" method="post" enctype="multipart/form-data" target="uploader_iframe">
+        <form id="image_form" action="/project/<%= sceneID %>/image" method="post" enctype="multipart/form-data" target="uploader_iframe">
             <input type="submit" style="position: absolute; left: -9999px" />
             <div class="modal-dialog">
                 <!-- Modal content-->
@@ -289,6 +292,26 @@
     });
   });
 
+  function getJson(){
+    $.ajax({
+      url : 'http://localhost:8000/project/load/<%= sceneID %>',
+      method : 'get',
+      data : {
+      },
+      dataType : "html",
+      success : function (data) {
+        if(data.length > 0){
+          $("#upload_before").css("display", "none");
+          $("#upload_after").css("display", "");
+          loadJson(data);
+        }
+      },
+      error : function(request,status,error){
+        console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+       }
+    });
+  }
+
   function submitImage(){
     if($("#inlineradio1:checked").val()){
       create('image');
@@ -306,10 +329,10 @@
   Dropzone.options.my = {
       paramName: "photo", // The name that will be used to transfer the file
       maxFilesize: 1024, // MB
-      url: "/project/<%= scene.idscene %>/background",
+      url: "/project/<%= sceneID %>/background",
       success : function(file, res){
         $("#right-toolbar").addClass("col-md-offset-8")
-        $("#main-canvas").css("display", "none");
+        $("#upload_before").css("display", "none");
         $("#upload_after").css("display", "");
         setBackground(res);
       }
