--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,7 +42,7 @@
 		                                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required="required"/>
 		                            </div>
 		                            <div class="form-group" style="text-align:left">
-		                                <label for="pwd">Password <a href="/sessions/forgot_password">(forgot password)</a></label>
+		                                <label for="pwd">Password (forgot password)</label>
 		                                <input type="password" class="form-control" id="pwd" name="pwd" placeholder="Password" required="required"/>
 		                            </div>
 		                            <button type="submit" class="hasIcon shortcode_button btn_normal btn_type5">Sign in</button>
