apply set thumbnail

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -331,7 +331,7 @@
       maxFilesize: 1024, // MB
       url: "/project/<%= sceneID %>/background",
       success : function(file, res){
-        $("#right-toolbar").addClass("col-md-offset-8")
+        //$("#right-toolbar").addClass("col-md-offset-8")
         $("#upload_before").css("display", "none");
         $("#upload_after").css("display", "");
         setBackground(res);
