Update url relationship

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -294,7 +294,7 @@
 
   function getJson(){
     $.ajax({
-      url : 'http://localhost:8000/project/load/<%= sceneID %>',
+      url : '/project/load/<%= sceneID %>',
       method : 'get',
       data : {
       },
