Move objectList to Scenery, Scenery to project model.

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -303,7 +303,7 @@
         if(data.length > 0){
           $("#upload_before").css("display", "none");
           $("#upload_after").css("display", "");
-          loadJson(data);
+          loadProject(data);
         }
       },
       error : function(request,status,error){
