update create thumbnail logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,8 @@
       </header>
     </header>
 
-    <div class="fullscreen_block fw_background bg_video">
-    	<iframe src="http://www.youtube.com/embed/iAJncW1Qj9w?controls=0&amp;autoplay=1&amp;showinfo=0&amp;modestbranding=1&amp;wmode=opaque&amp;rel=0" allowfullscreen></iframe>
-    </div>
+		<div class="fullscreen_block fw_background bg_image bg1"></div>
+	<div class="content_bg"></div>
 
 	<div class="content_bg"></div>
 	<script type="text/javascript" src="../static/js/jquery-ui.min.js"></script>
