add "createScene" button

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -48,6 +48,7 @@
                             <li class="active" data-toggle="modal" data-target="#myModal"><a>Image</a></li>
                             <li onclick="create('teleport')"><a>Teleport</a></li>
                             <li onclick="setMiniMap()"><a>minimap</a></li>
+                           <li onclick="createScene()"><a>Scene</a></li>
                             </li>
                         </ul>
                     </div>
