--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -52,6 +52,8 @@
                             </li>
                         </ul>
                     </div>
+                    <div id="scene-list">
+                    </div>
                     <!--/.well -->
                 </div>
                 <!--/sidebar-nav-fixed -->
