1.Make current scene number to blod text 2.Add scene list dropdown

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -52,8 +52,8 @@
                             </li>
                         </ul>
                     </div>
-                    <div id="scene-list">
-                    </div>
+                    <div id="scene-list"></div>
+                    <select id="scene-dropdown"></select>
                     <!--/.well -->
                 </div>
                 <!--/sidebar-nav-fixed -->
