switch editor mode

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -65,7 +65,7 @@
   }
   #container {
       width: 100%;
-      height: 1000px;
+      height: 600px;
   }
   #main-canvas{
     padding : 10px;
@@ -110,7 +110,7 @@
 
           </ul>
           <ul class="nav navbar-nav navbar-right" style="text-align:center;">
-            <li class="header-item" style="display:inline-flex;">
+            <li class="header-item" style="display:inline-flex;" onClick="switchEditorMode()">
               <span class="header-span">미리보기</span>
             </li>
             <li class="header-item" style="display:inline-flex;" onClick="saveProject(1, <%= sceneID %>);">
