--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -94,7 +94,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Traverser360</a>
+          <a class="navbar-brand" href="/">Traverser360</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-right:0px;">
