--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -30,6 +30,16 @@
     box-shadow: 0px 2px 5px #666;
     z-index: 1;
   }
+  #object-panel{
+    width: 200px;
+    height: 300px;
+    border-radius: 1%;
+    position: fixed;
+    top: 100px;
+    left: 100px;
+    box-shadow: 0px 2px 5px #666;
+    z-index: 1;
+  }
   .panel-floating{
     height: 40px;
     box-shadow: 0px 2px 5px #666;
@@ -141,6 +151,10 @@
               <span>새로운 장면</span>
             </div>
           </div>
+        </div>
+      </div>
+      <div id="object-panel" class="panel panel-default" style="display:none;">
+        <div class="panel-body" style="padding:10px;">
         </div>
       </div>
       <div id="main-canvas" class="col-md-8" style="height:100%;">
