--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -8,6 +8,11 @@
   <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="../static/js/bundle.js"></script>
   <style>
+  body, html {
+      height: 95%;
+      padding: 0;
+  }
+
   #floating-button{
     width: 55px;
     height: 55px;
@@ -65,7 +70,10 @@
   }
   #container {
       width: 100%;
-      height: 600px;
+      height: 100%;
+      overflow: hidden;
+      margin: 0;
+      padding: 0;
   }
   #main-canvas{
     padding : 10px;
