--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -31,7 +31,7 @@
     z-index: 1;
   }
   #object-panel{
-    width: 200px;
+    width: 300px;
     height: 300px;
     border-radius: 1%;
     position: fixed;
@@ -120,7 +120,7 @@
 
           </ul>
           <ul class="nav navbar-nav navbar-right" style="text-align:center;">
-            <li class="header-item" style="display:inline-flex;">
+            <li class="header-item" style="display:inline-flex;" onclick="toggleEditorMode()">
               <span class="header-span">미리보기</span>
             </li>
             <li class="header-item" style="display:inline-flex;" onClick="saveProject(1, <%= sceneID %>);">
@@ -155,6 +155,11 @@
       </div>
       <div id="object-panel" class="panel panel-default" style="display:none;">
         <div class="panel-body" style="padding:10px;">
+        <div class="panel panel-default panel-floating" onclick="removeSelectedObject()">
+            <div class="panel-body panel-floating-inside">
+              <span>삭제</span>
+            </div>
+          </div>
         </div>
       </div>
       <div id="main-canvas" class="col-md-8" style="height:100%;">
