Add template selection modal, background change button

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -120,6 +120,9 @@
 
           </ul>
           <ul class="nav navbar-nav navbar-right" style="text-align:center;">
+            <li class="header-item" style="display:inline-flex;" onclick="getBackgroundPopup()">
+              <span class="header-span">배경바꾸기</span>
+            </li>
             <li class="header-item" style="display:inline-flex;" onclick="toggleEditorMode()">
               <span class="header-span">미리보기</span>
             </li>
