--- a/views/project.ejs
+++ b/views/project.ejs
@@ -21,7 +21,7 @@
         </ul>
         </div>
         <div style="margin-right:30px;float:right;">
-          <a href="/project/new" class="hasIcon shortcode_button btn_normal btn_type5" onClick="return newProject();"><i class="icon-star-o"></i>New Project</a>
+          <a href="#" class="hasIcon shortcode_button btn_normal btn_type5" onclick="selectTemplate()"><i class="icon-star-o"></i>New Project</a>
         </div>
       </div>
         <% if(scenes.length > 0){ %>
@@ -96,6 +96,32 @@
 			return true;
 			<% } %>
 		}
+
+        function selectTemplate() {
+            $("#templateModal").modal('show');
+        }
     </script>
 </body>
+<div id="templateModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">템플릿을 선택하세요</h4>
+            </div>
+            <div class="modal-body">
+                <a href="/project/new" onClick="return newProject();">
+                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="100">
+                    <h6><a href="#">자유모드</a></h6>
+                </a>
+                <a href="/project/new" onClick="return newProject();">
+                    <img src="https://unsplash.it/300/300/?random" alt="" class="fw_featured_image" width="100">
+                    <h6><a href="#">심리테스트</a></h6>
+                </a>
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
+    </div>
+</div>
 </html>
