--- a/views/project.ejs
+++ b/views/project.ejs
@@ -114,7 +114,7 @@
                     <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="100">
                     <h6><a href="#">자유모드</a></h6>
                 </a>
-                <a href="/project/new" onClick="return newProject();">
+                <a href="/project/new?type=simri" onClick="return newProject();">
                     <img src="https://unsplash.it/300/300/?random" alt="" class="fw_featured_image" width="100">
                     <h6><a href="#">심리테스트</a></h6>
                 </a>
