Different initial scene setup by project type

--- a/views/project.ejs
+++ b/views/project.ejs
@@ -118,6 +118,10 @@
                     <img src="https://unsplash.it/300/300/?random" alt="" class="fw_featured_image" width="100">
                     <h6><a href="#">심리테스트</a></h6>
                 </a>
+                <a href="/project/new?type=hidenseek" onClick="return newProject();">
+                    <img src="https://unsplash.it/300/301/?random" alt="" class="fw_featured_image" width="100">
+                    <h6><a href="#">숨은그림찾기</a></h6>
+                </a>
             </div>
             <div class="modal-footer">
             </div>
