--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -139,7 +139,7 @@
               <span>Image</span>
             </div>
           </div>
-          <div class="panel panel-default panel-floating" onclick="createLatelyObject()">
+          <div class="panel panel-default panel-floating" onclick="createOption()">
             <div class="panel-body panel-floating-inside">
               <span>button2</span>
             </div>
