--- a/views/project.ejs
+++ b/views/project.ejs
@@ -110,7 +110,7 @@
                 <h4 class="modal-title">템플릿을 선택하세요</h4>
             </div>
             <div class="modal-body">
-                <a href="/project/new" onClick="return newProject();">
+                <a href="/project/new?type=free" onClick="return newProject();">
                     <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="100">
                     <h6><a href="#">자유모드</a></h6>
                 </a>
