Change logo image and link

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,6 @@
 <div class="header_wrapper">
   <div class="logo_sect">
-        <a href="index.html" class="logo"><img src="../static/img/logo.png" alt=""  class="logo_def"><img src="../static/img/retina/logo.png" alt="" class="logo_retina"></a>
+        <a href="/" class="logo"><img src="../static/img/logo.png" alt=""  class="logo_def"><img src="../static/img/retina/logo.png" alt="" class="logo_retina"></a>
         <div class="slogan">Traverser360 VR Editor</div>
     </div>
     <div class="header_rp">
